fix gap

--- a/app/themes/uggwc_pro/src/scss/parts/content.scss
+++ b/app/themes/uggwc_pro/src/scss/parts/content.scss
@@ -7,7 +7,7 @@
 	.section__content {
 		display: flex;
 		justify-content: center;
-		gap: 32px;
+		gap: 24px;
 		flex-wrap: wrap;
 
 		.content__container {
